# weather-bot

./: .gitignore  README.md  pyproject.toml
app/: app_main.py  bot_main.py  config.py  database_part.py  flask_main.py  getting_data.py  index.html  main.py  main_tg_part.py  postgres_conn.py  register.html  weather_api.py
app/cgi-bin/: index.py  index_no.py
app/templates/: index.html
