[tool.poetry]
name = "weather-bot"
version = "0.1.0"
description = ""
authors = ["AleksandraV <am.amsti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
aiogram = "^2.20"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
Flask = "^2.1.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
